--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.jsx",
   "scripts": {
-    "start": "node server.js", // serves the application
-  "heroku-postbuild": "webpack -p" // runs after installation
+    "start": "node server.js",
+  	"heroku-postbuild": "webpack -p",
   },
   "license": "MIT",
   "dependencies": {
