--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.jsx",
   "scripts": {
     "start": "node server.js",
-  	"heroku-postbuild": "webpack -p",
+  	"heroku-postbuild": "webpack -p"
   },
   "license": "MIT",
   "dependencies": {
