--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.jsx",
   "scripts": {
     "start": "node server.js",
+    "build": "webpack --mode production",
   	"heroku-postbuild": "webpack -p"
   },
   "license": "MIT",
