--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "start": "node server.js",
     "build": "webpack --mode production",
-  	"heroku-postbuild": "webpack -p"
+    "heroku-postbuild": "webpack -p"
   },
   "license": "MIT",
   "dependencies": {
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@ionic/react": "^4.11.0",
+    "@types/react-router": "^5.1.1",
+    "@types/react-router-dom": "^5.1.0",
     "ag-grid": "^18.1.2",
     "ag-grid-community": "^21.0.1",
     "ag-grid-react": "^21.0.1",
@@ -27,8 +30,8 @@
     "react-dom": "^16.7.0",
     "react-dom-factories": "^1.0.2",
     "react-redux": "^7.1.0",
-    "react-router": "^5.0.0",
-    "react-router-dom": "^5.0.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^2.0.5",
     "reactstrap": "^7.0.2",
     "redux": "^4.0.1",
@@ -50,7 +53,8 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "jest": "^24.8.0",
-    "jest-css-modules": "^2.1.0"
+    "jest-css-modules": "^2.1.0",
+    "svg-inline-loader": "^0.8.0"
   },
   "jest": {
     "setupFiles": [
