--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.jsx",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "webpack",
+  	"heroku-postbuild": "echo Skip build on Heroku"
   },
   "license": "MIT",
   "dependencies": {
