--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.jsx",
   "scripts": {
     "start": "node server.js",
-    "build": "webpack",
+   	"build": "webpack --mode production",
   	"heroku-postbuild": "echo Skip build on Heroku"
   },
   "license": "MIT",
